<resources>
    <string name="app_name">5-3-1 App</string>
    <string name="start_workout_button">Start Workout</string>
    <string name="training_history_button">Training History</string>
    <string name="one_rep_calc_button">1RM Calculator</string>
    <string name="settings_button">Settings</string>
    <string name="main_title">5/3/1 Tracker</string>
    <string name="set_program_title">Set Program</string>
    <string name="ohp_TM">OHP Training Max</string>
    <string name="squat_TM">Squat Training Max</string>
    <string name="bench_TM">Bench Press Training Max</string>
    <string name="deadlift_TM">Deadlift Training Max</string>
    <string name="save_TM">Save</string>
    <string name="main_exercises_text">Main Exercises</string>
    <string name="extra_exercises_text">Extra Exercises</string>
    <string name="extra_exercise_spinner">Extra Exercise</string>
    <string name="day1">Day 1 Max</string>
    <string name="day2">Day 2 Max</string>
    <string name="day3">Day 3 Max</string>
    <string name="day4">Day 4 Max</string>
    <string name="choose_day">Choose Day</string>
    <string name="go_button">Go</string>
    <string name="week1Day1">Week 1 Day 1</string>
    <string name="week1Day2">Week 1 Day 2</string>
    <string name="week1Day3">Week 1 Day 3</string>
    <string name="week1Day4">Week 1 Day 4</string>
    <string name="week2Day1">Week 2 Day 1</string>
    <string name="week2Day2">Week 2 Day 2</string>
    <string name="week2Day3">Week 2 Day 3</string>
    <string name="week2Day4">Week 2 Day 4</string>
    <string name="week3Day1">Week 3 Day 1</string>
    <string name="week3Day2">Week 3 Day 2</string>
    <string name="week3Day3">Week 3 Day 3</string>
    <string name="week3Day4">Week 3 Day 4</string>
    <string name="finishWorkoutBtn">Finish Workout</string>
    <string name="placeholder">Placeholder</string>
    <string name="BBB">Boring But Big</string>
    <string name="finishCycleButton">Finish Cycle</string>
    <string name="template">5/3/1 Template</string>
    <string name="updateCycleText">Choose exercises to update</string>
    <string name="updateCycleButton">Update Cycle</string>
    <string name="weightText">Weight (lbs)</string>
    <string name="repsText">Reps</string>
    <string name="calculatedORM">Calculated one-rep max: </string>
    <string name="ormTitle">Enter weight + number of reps</string>
    <string name="calculateButton">Calculate</string>
</resources>