<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkoutActivity">

    <Button
        android:id="@+id/finishWorkoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/finishWorkoutBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/workoutDayTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/placeholder"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="350dp"
        android:layout_height="515dp"
        android:layout_marginStart="28dp"
        app:layout_constraintBottom_toTopOf="@+id/finishWorkoutBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workoutDayTitle"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mainWorkoutTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/placeholder"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/mainExercise1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:minHeight="48dp"
                android:text="@string/placeholder"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/mainExercise2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:minHeight="48dp"
                android:text="@string/placeholder"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/mainExercise3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:minHeight="48dp"
                android:text="@string/placeholder"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/mainExercise4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:minHeight="48dp"
                android:text="@string/placeholder"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/mainExercise5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:minHeight="48dp"
                android:text="@string/placeholder"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/mainExercise6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:minHeight="48dp"
                android:text="@string/placeholder"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/BBB"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:minHeight="48dp"
                android:text="@string/placeholder"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:minHeight="48dp"
                android:text="@string/placeholder"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBox11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:minHeight="48dp"
                android:text="@string/placeholder"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBox12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:minHeight="48dp"
                android:text="@string/placeholder"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBox13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:minHeight="48dp"
                android:text="@string/placeholder"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/extraExerciseTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/placeholder"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/checkBox14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:minHeight="48dp"
                android:text="@string/placeholder"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBox15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:minHeight="48dp"
                android:text="@string/placeholder"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkBox16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:minHeight="48dp"
                android:text="@string/placeholder"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>